--- a/style.css
+++ b/style.css
@@ -16,8 +16,11 @@ main {
   padding: 0;
   color: #2c2c2c;
 }
-
-@media (max-width: 414px) and (orientation: portrait) {
+/*INTRO*/
+.intro {
+  background-image: url("./assets/dots.svg");
+}
+@media (max-width: 650px) and (orientation: portrait) {
   .intro {
     height: 100svh;
     display: flex;
@@ -27,14 +30,17 @@ main {
     overflow: hidden;
     background-image: url("./assets/dots.svg");
   }
-  .intro__nav-wrapper {
+  .intro__header {
     width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 1rem;
   }
-  .nav-wrapper__logo {
+  .header__nav-wrapper {
+    display: none;
+  }
+  .header__logo {
     margin-top: 0.5rem;
   }
   .intro__title {
@@ -46,13 +52,75 @@ main {
     letter-spacing: -0.0625rem;
     margin: 0 3rem;
   }
+  .intro__portrait {
+    width: 19.875rem;
+    height: 18.75rem;
+  }
 }
 @media (max-width: 1440px) and (orientation: landscape) {
+  .intro {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(5, 1fr);
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+    padding: 2.25rem 6.44rem 0rem 5rem;
+  }
+  .intro__header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    grid-area: 1 / 1 / 1 / 6;
+  }
+  .header__logo {
+    width: 5.9375rem;
+    height: 6.8125rem;
+    margin-top: 1rem;
+  }
+  .header__burger {
+    display: none;
+  }
+  .header__nav-wrapper {
+    display: flex;
+    gap: 2.5rem;
+  }
+  .nav-wrapper__link {
+    text-decoration: none;
+    font-family: Roboto;
+    font-size: 1.5rem;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    color: #000;
+  }
+  .intro__title {
+    width: 19.5625rem;
+    grid-area: 2 / 1 / 6 / 2;
+    font-family: Open Sans;
+    font-size: 3rem;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 3rem; /* 100% */
+    letter-spacing: -0.0625rem;
+    margin-bottom: 5rem;
+  }
+  .intro__portrait {
+    grid-area: 4 / 5 / 6 / 6;
+    width: 27.1875rem;
+    height: 24.6875rem;
+  }
 }
-@media (max-width: 414px) and (orientation: portrait) {
+/*SOY MARCE*/
+.soy-marce {
+  background-color: #141414;
+  color: #fafafa;
+}
+@media (max-width: 650px) and (orientation: portrait) {
   .soy-marce {
-    background-color: #141414;
-    color: #fafafa;
     height: 33.625rem;
     display: flex;
     flex-direction: column;
@@ -69,7 +137,8 @@ main {
     margin: 0;
   }
   .soy-marce__text {
-    width: 100%;
+    width: 30.25rem;
+    height: 10.3125rem;
     font-size: 1rem;
     font-style: normal;
     font-weight: 400;
@@ -82,12 +151,47 @@ main {
   }
 }
 @media (max-width: 1440px) and (orientation: landscape) {
-}
-@media (max-width: 414px) and (orientation: portrait) {
-  .servicios {
-    display: flex;
-    flex-direction: column;
+  .soy-marce {
+    height: 33.625rem;
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: repeat(6, 1fr);
+    justify-content: center;
     align-items: center;
+  }
+  .soy-marce__check {
+    width: 13.1875rem;
+    height: 13.1875rem;
+    grid-area: 3 / 4 / 5 / 6;
+  }
+  .soy-marce__title {
+    grid-area: 3 / 7 / 4 / 10;
+    font-family: "Open Sans";
+    font-size: 2rem;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    letter-spacing: -0.125rem;
+  }
+  .soy-marce__text {
+    width: 33.25rem;
+    height: 10.3125rem;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1.5rem;
+    grid-area: 4 / 7 / 5 / 10;
+    letter-spacing: 0.25px;
+  }
+}
+/*SERVICIOS*/
+.servicios {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+@media (max-width: 650px) and (orientation: portrait) {
+  .servicios {
     gap: 4rem;
     padding: 5rem 0rem;
   }
@@ -122,16 +226,82 @@ main {
   }
 }
 @media (max-width: 1440px) and (orientation: landscape) {
+  .servicios {
+    padding: 5rem 0rem;
+  }
+  .servicios__title {
+    margin-bottom: 5rem;
+    font-family: Open Sans;
+    font-size: 3rem;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 3rem; /* 100% */
+    letter-spacing: -0.0625rem;
+  }
+  .servicios__hago-cosas-wrapper {
+    width: 80%;
+    display: flex;
+    justify-content: space-between;
+  }
+  .hago-cosas-wrapper__hago-cosas {
+    width: 16.9375rem;
+    height: 19.375rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+  }
+  .hago-cosas__img {
+    width: 8.625rem;
+    height: 8.625rem;
+  }
+  .hago-cosas__sub-title {
+    font-family: Roboto;
+    font-size: 1.5rem;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+  }
+  .hago-cosas__text {
+    text-align: center;
+  }
 }
-@media (max-width: 414px) and (orientation: portrait) {
+/*ESCRIBIME*/
+.escribime {
+  background-color: #141414;
+  color: #fafafa;
+  display: flex;
+}
+.escribime__form-wrapper,
+.form-wrapper__form-item {
+  display: flex;
+  flex-direction: column;
+}
+.form-wrapper__text-box,
+.form-wrapper__input {
+  border: none;
+  border-radius: 5px;
+}
+.escribime__btn {
+  width: 100%;
+  height: 2.8125rem;
+  margin-top: 1.5rem;
+  border: none;
+  border-radius: 5px;
+  background-color: #ffd953;
+  font-family: Roboto, "Segoe UI", Tahoma, Geneva, Verdana, sans-serif; /* defaultea a open sans despues de roboto por main*/
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+@media (max-width: 650px) and (orientation: portrait) {
   .escribime {
     height: 41.25rem;
     padding: 4.37rem 1.25rem;
-    display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: #141414;
-    color: #fafafa;
   }
   .escribime__title {
     margin: 0rem 0rem 2.28rem 0rem;
@@ -141,11 +311,7 @@ main {
     line-height: normal;
     letter-spacing: -0.125rem;
   }
-  .escribime__form-wrapper,
-  .form-wrapper__form-item {
-    display: flex;
-    flex-direction: column;
-  }
+
   .escribime__form-wrapper {
     min-width: 100%;
     gap: 1.5rem;
@@ -164,32 +330,59 @@ main {
     width: 100%;
     height: 2.8125rem;
   }
-  .form-wrapper__text-box,
-  .form-wrapper__input {
-    border-radius: 5px;
-  }
-  .escribime__btn {
-    width: 100%;
-    height: 2.8125rem;
-    margin-top: 1.5rem;
-    border: none;
-    border-radius: 5px;
-    background-color: #ffd953;
-    font-family: Roboto, "Segoe UI", Tahoma, Geneva, Verdana, sans-serif; /* defaultea a open sans despues de roboto por main*/
-    font-size: 1rem;
-    font-style: normal;
-    font-weight: 700;
-    line-height: normal;
-  }
 }
 @media (max-width: 1440px) and (orientation: landscape) {
+  .escribime {
+    flex-direction: row;
+    height: 41.25rem;
+    justify-content: center;
+    align-items: flex-start;
+    padding: 6.25rem 0 0 0rem;
+    gap: 4.81rem;
+  }
+  .escribime__title {
+    font-family: Open Sans;
+    font-size: 3rem;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 3rem; /* 100% */
+    letter-spacing: -0.0625rem;
+  }
+  .escribime__form-wrapper {
+    gap: 1.5rem;
+  }
+  .form-wrapper__form-item {
+    gap: 0.5rem;
+  }
+  .form-wrapper__label {
+    font-family: Roboto;
+    font-size: 0.8125rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+  }
+  .form-wrapper__input {
+    width: 23.5rem;
+    height: 2.8125rem;
+  }
 }
-@media (max-width: 414px) and (orientation: portrait) {
+/*FOOTER*/
+.footer {
+  background-color: #dbdbdb;
+}
+.social-media__wrapper {
+  display: flex;
+  align-items: center;
+}
+.footer__social-media {
+  display: flex;
+  flex-direction: column;
+}
+@media (max-width: 650px) and (orientation: portrait) {
   .footer {
     width: 23.4375rem;
     height: 30.8125rem;
     padding: 3.31rem 0 0 1.19rem;
-    background-color: #dbdbdb;
   }
   .footer__trademark-wrapper {
     font-family: Roboto;
@@ -212,14 +405,9 @@ main {
     margin: 0 0 5.31rem 0;
   }
   .footer__social-media {
-    display: flex;
-    flex-direction: column;
     gap: 1.81rem;
   }
   .social-media__wrapper {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
     gap: 0.5rem;
     font-family: Roboto;
     font-size: 1rem;
@@ -229,9 +417,27 @@ main {
   }
 }
 @media (max-width: 1440px) and (orientation: landscape) {
-}
-
-.intro__portrait {
-  width: 19.875rem;
-  height: 18.75rem;
+  .footer {
+    height: 21.625rem;
+    padding: 6rem 13.44rem 6rem 5rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background: url("./assets/dots.svg");
+  }
+  .footer__trademark-wrapper {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+  .trademark-wrapper__logo {
+    width: 7rem;
+    height: 6.4375rem;
+  }
+  .footer__social-media {
+    gap: 2rem;
+  }
+  .social-media__wrapper {
+    gap: 1rem;
+  }
 }
